tests/negative/RepeatedNamedArgumentsPuns.juvix
module RepeatedNamedArgumentsPuns;

type Bool := true;

type T := mkT@{
  a : Bool
};

f (a : Bool) : T := mkT@{
 a;
 a := true;
}
